# Perfect

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DSL.md  OPTIMIZATION_PLAN.md  README.md  fix_build.py  patch.py
.github/: dependabot.yml
.github/workflows/: build.yml  pr-checks.yml  release.yml
examples/: demo.anim  ghost-in-the-machine.anim  the-duel.anim  the-heist.anim  the-last-barista.anim  the-signal-v2.anim  the-signal-v3.anim  the-signal.anim
examples/assets/characters/kai_rig/: rig.json
examples/assets/characters/maya_rig/: rig.json
examples/assets/characters/procedural/: dex.json  echo.json  grim.json  kai.json  lina.json  marshal.json  maya.json  nyx.json  renko.json  viktor.json  viper.json  zara.json
examples/assets/characters/viktor_rig/: rig.json
src/: errors.rs  lib.rs  main.rs
src/assets/: mod.rs  validation.rs
src/ast/: mod.rs
src/audio/: mod.rs
src/parser/: animdsl.pest  mod.rs
src/procedural/: draw.rs  mod.rs  mod.rs.bak
src/renderer/: cache.rs  dof.rs  dof.rs.bak  mod.rs  parallel.rs  parallel.rs.bak  stream.rs
src/scene/: mod.rs
src/skeleton/: mod.rs
src/timeline/: curves.rs  mod.rs
src/video/: formats.rs  mod.rs  stream.rs
