[package]
name = "animdsl"
version = "0.1.0"
edition = "2021"
description = "A DSL for generating 2D animated movie scenes"

[dependencies]
# Parser combinators
pest = "2.7"
pest_derive = "2.7"

# SVG parsing and rendering
usvg = "0.44"
resvg = "0.44"

# 2D rendering
tiny-skia = "0.11"

# Image encoding (for frames)
png = "0.17"

# Color handling
palette = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization (for intermediate representations)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress bars
indicatif = "0.17"

# Lazy static for global cache
once_cell = "1.19"

# Parallel processing
rayon = "1.10"